--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/adult-gynecological-triage-dialog/adult-gynecological-triage-dialog.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/adult-gynecological-triage-dialog/adult-gynecological-triage-dialog.component.html
@@ -5,4 +5,4 @@
 	(confirm)="setTriage($event)"
 	(cancel)="dialogRef.close()"
 	[confirmLabel]="'guardia.triage.CONFIRM'"
-	[cancelLabel]="'buttons.CANCEL'"></app-adult-gynecological-triage>
+	[cancelLabel]="'buttons.CANCEL'" [disableConfirmButton]="requestPending"></app-adult-gynecological-triage>
