--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/pediatric-triage/pediatric-triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/pediatric-triage/pediatric-triage.component.html
@@ -3,7 +3,7 @@
 
 		<section id="triage">
 			<app-triage (triageCategoryIdChange)="setTriageCategoryId($event)"
-						(doctorsOfficeIdChange)="setDoctorsOfficeId($event)">
+				(doctorsOfficeIdChange)="setDoctorsOfficeId($event)">
 			</app-triage>
 		</section>
 
@@ -21,36 +21,35 @@
 				<div formGroupName="appearance" fxLayout="column">
 
 					<mat-form-field class="simple-form-field" appearance="outline">
-							<mat-label [translate]="'guardia.triage.TEMPERATURE'"></mat-label>
-							<mat-select formControlName="bodyTemperatureId">
-								<mat-option id="bodyTemperatureId"
-											*ngFor="let bodyTemperature of (bodyTemperatures$ | async )"
-											[value]="bodyTemperature.id">
-									{{bodyTemperature.description}}
-								</mat-option>
-							</mat-select>
-						</mat-form-field>
+						<mat-label [translate]="'guardia.triage.TEMPERATURE'"></mat-label>
+						<mat-select formControlName="bodyTemperatureId">
+							<mat-option id="bodyTemperatureId"
+								*ngFor="let bodyTemperature of (bodyTemperatures$ | async )"
+								[value]="bodyTemperature.id">
+								{{bodyTemperature.description}}
+							</mat-option>
+						</mat-select>
+					</mat-form-field>
 
 					<div fxLayout="column" fxLayoutGap="6px" class="mat-form-field-wrapper">
 						<mat-label [translate]="'guardia.triage.CRYING_EXCESSIVE'"></mat-label>
-						<mat-radio-group name="cryingExcessive" id="cryingExcessive"
-												 formControlName="cryingExcessive"
-												 fxLayoutGap="20px">
-									<mat-radio-button id="cryingExcesive" [value]="true">
-										Si
-									</mat-radio-button>
-									<mat-radio-button id="notCryingExcesive" [value]="false">
-										No
-									</mat-radio-button>
-								</mat-radio-group>
+						<mat-radio-group name="cryingExcessive" id="cryingExcessive" formControlName="cryingExcessive"
+							fxLayoutGap="20px">
+							<mat-radio-button id="cryingExcesive" [value]="true">
+								Si
+							</mat-radio-button>
+							<mat-radio-button id="notCryingExcesive" [value]="false">
+								No
+							</mat-radio-button>
+						</mat-radio-group>
 					</div>
 
 					<mat-form-field class="simple-form-field" appearance="outline">
 						<mat-label [translate]="'guardia.triage.MUSCLE_HYPERTONIA'"></mat-label>
 						<mat-select formControlName="muscleHypertoniaId">
 							<mat-option id="muscleHypertoniaId"
-										*ngFor="let muscleHypertonya of (muscleHypertonyaOptions$ | async)"
-										[value]="muscleHypertonya.id">
+								*ngFor="let muscleHypertonya of (muscleHypertonyaOptions$ | async)"
+								[value]="muscleHypertonya.id">
 								{{muscleHypertonya.description}}
 							</mat-option>
 						</mat-select>
@@ -65,13 +64,11 @@
 					<div fxLayout="column" formGroupName="respiratoryRate" class="mat-form-field-wrapper">
 						<mat-form-field class="simple-form-field vital-sign" appearance="outline">
 							<mat-label [translate]="'guardia.triage.RESPIRATORY_RATE'"></mat-label>
-							<input matInput id="respiratoryRate"
-								   formControlName="value"
-								   placeholder="{{'guardia.triage.RESPIRATORY_RATE' | translate }}"
-								   type="number">
+							<input matInput id="respiratoryRate" formControlName="value"
+								placeholder="{{'guardia.triage.RESPIRATORY_RATE' | translate }}" type="number">
 							<mat-error *ngIf="hasError(pediatricForm.get('breathing'), 'min', 'respiratoryRate')"
-									   [translate]="'forms.MIN_ERROR'"
-									   [translateParams]=" { min: getError(pediatricForm.get('breathing'), 'min', 'respiratoryRate').min }">
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]=" { min: getError(pediatricForm.get('breathing'), 'min', 'respiratoryRate').min }">
 							</mat-error>
 						</mat-form-field>
 						<app-effective-time
@@ -84,8 +81,8 @@
 						<mat-label [translate]="'guardia.triage.RESPIRATORY_RETRACTION'"></mat-label>
 						<mat-select formControlName="respiratoryRetractionId">
 							<mat-option id="respiratoryRetractionId"
-										*ngFor="let respiratoryRetraction of (respiratoryRetractionOptions$ | async)"
-										[value]="respiratoryRetraction.id">
+								*ngFor="let respiratoryRetraction of (respiratoryRetractionOptions$ | async)"
+								[value]="respiratoryRetraction.id">
 								{{respiratoryRetraction.description}}
 							</mat-option>
 						</mat-select>
@@ -106,12 +103,11 @@
 					<div fxLayout="column" formGroupName="bloodOxygenSaturation">
 						<mat-form-field class="simple-form-field vital-sign" appearance="outline">
 							<mat-label [translate]="'guardia.triage.OXYGEN_SATURATION'"></mat-label>
-							<input id="bloodOxygenSaturation"
-								   formControlName="value"
-								   placeholder="00" type="number" matInput>
+							<input id="bloodOxygenSaturation" formControlName="value" placeholder="00" type="number"
+								matInput>
 							<mat-error *ngIf="hasError(pediatricForm.get('breathing'), 'min', 'bloodOxygenSaturation')"
-									   [translate]="'forms.MIN_ERROR'"
-									   [translateParams]=" { min: getError(pediatricForm.get('breathing'), 'min', 'bloodOxygenSaturation').min }">
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]=" { min: getError(pediatricForm.get('breathing'), 'min', 'bloodOxygenSaturation').min }">
 							</mat-error>
 						</mat-form-field>
 						<app-effective-time
@@ -129,7 +125,7 @@
 						<mat-label [translate]="'guardia.triage.PERFUSION'"></mat-label>
 						<mat-select formControlName="perfusionId">
 							<mat-option id="perfusionId" *ngFor="let perfusion of (perfusionOptions$ | async)"
-										[value]="perfusion.id">
+								[value]="perfusion.id">
 								{{perfusion.description}}
 							</mat-option>
 						</mat-select>
@@ -139,14 +135,14 @@
 						<mat-form-field class="simple-form-field vital-sign" appearance="outline">
 							<mat-label [translate]="'guardia.triage.HEART_RATE'"></mat-label>
 							<input matInput id="heartRate" formControlName="value"
-								   placeholder="{{'guardia.triage.HEART_RATE' | translate }}" type="number">
+								placeholder="{{'guardia.triage.HEART_RATE' | translate }}" type="number">
 							<mat-error *ngIf="hasError(pediatricForm.get('circulation'), 'min', 'heartRate')"
-									   [translate]="'forms.MIN_ERROR'"
-									   [translateParams]=" { min: getError(pediatricForm.get('circulation'), 'min', 'heartRate').min }">
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]=" { min: getError(pediatricForm.get('circulation'), 'min', 'heartRate').min }">
 							</mat-error>
 						</mat-form-field>
 						<app-effective-time [effectiveTime]="pediatricForm.value.circulation.heartRate.effectiveTime"
-											(update)="setVitalSignEffectiveTime($event, pediatricForm.controls.circulation,'heartRate')">
+							(update)="setVitalSignEffectiveTime($event, pediatricForm.controls.circulation,'heartRate')">
 						</app-effective-time>
 					</div>
 				</div>
@@ -160,7 +156,8 @@
 		<button mat-stroked-button class="uppercase" (click)="back()">
 			<span [translate]="cancelLabel"></span>
 		</button>
-		<button mat-raised-button class="uppercase" color="primary" (click)="confirmPediatricTriage()">
+		<button mat-raised-button class="uppercase" color="primary" (click)="confirmPediatricTriage()"
+			[disabled]="disableConfirmButton">
 			<span [translate]="confirmLabel"></span>
 		</button>
 	</div>
