--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/administrative-triage-dialog/administrative-triage-dialog.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/administrative-triage-dialog/administrative-triage-dialog.component.html
@@ -5,5 +5,6 @@
 	(confirm)="setTriage($event)"
 	(cancel)="dialogRef.close()"
 	[confirmLabel]="'guardia.triage.CONFIRM'"
-	[cancelLabel]="'buttons.CANCEL'"></app-administrative-triage>
+	[cancelLabel]="'buttons.CANCEL'"
+	[disableConfirmButton]="requestPending"></app-administrative-triage>
 
