--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/components/administrative-triage/administrative-triage.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/components/administrative-triage/administrative-triage.component.html
@@ -8,7 +8,7 @@
 		<button mat-stroked-button class="uppercase" (click)="back()">
 			<span [translate]="cancelLabel"></span>
 		</button>
-		<button mat-raised-button class="uppercase" color="primary" (click)="confirmTriage()">
+		<button mat-raised-button class="uppercase" color="primary" (click)="confirmTriage()" [disabled]="disableConfirmButton">
 			<span [translate]="confirmLabel"></span>
 		</button>
 	</div>
