--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/dialogs/pediatric-triage-dialog/pediatric-triage-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/dialogs/pediatric-triage-dialog/pediatric-triage-dialog.component.html
@@ -5,4 +5,5 @@
 	(confirm)="setTriage($event)"
 	(cancel)="dialogRef.close()"
 	[confirmLabel]="'guardia.triage.CONFIRM'"
-	[cancelLabel]="'buttons.CANCEL'"></app-pediatric-triage>
+	[cancelLabel]="'buttons.CANCEL'"
+	[disableConfirmButton]="requestPending"></app-pediatric-triage>
