--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/menu/menu.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/menu/menu.component.html
@@ -6,6 +6,6 @@
 			[id]="menuItem.id"
 			*ngFor="let menuItem of menuItems">
 		<mat-icon matListIcon fontSet="material-icons-outlined">{{menuItem.icon}}</mat-icon>
-		<span [translate]=menuItem.text></span>
+		<app-label [label]="menuItem.label"></app-label>
 	</mat-list-item>
 </mat-nav-list>
