tg-3471 - Se aplica color de background sugerido por ux

--- a/front-end/apps/projects/hospital/src/assets/styles/mat-mixins.scss
+++ b/front-end/apps/projects/hospital/src/assets/styles/mat-mixins.scss
@@ -4,12 +4,13 @@ $primary-bg: #EDF1F7;
 $default-color: 50;
 
 @mixin general($theme) {
+	$primary: map-get($theme, primary);
 	mat-sidenav-content {
-		background-color: $primary-bg;
+		background-color: mat-color($primary, 25);
 	}
 
 	.app-background-color {
-		background-color: $primary-bg;
+		background-color: mat-color($primary, 25);
 	}
 }
 
