--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/admision-administrativa/admision-administrativa.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/admision-administrativa/admision-administrativa.component.scss
@@ -8,4 +8,12 @@
 	}
 	max-width: 35%;
 	padding-top: 10px;
+
+	.in-attention {
+		font-style: italic;
+		color: grey;
+		margin-top: -30px;
+		margin-left: 10px;
+		font-size: 75%;
+	}
 }
