tg-3501 [FIX]  No se muestra tildado correctamente cuando la Intervención policial es NO

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
@@ -108,7 +108,7 @@
 		<mat-radio-button id="policeIntervention" [value]="true" [checked]="form.value.hasPoliceIntervention">
 			Si
 		</mat-radio-button>
-		<mat-radio-button id="withoutPoliceIntervention" [value]="false">
+		<mat-radio-button id="withoutPoliceIntervention" [value]="false" [checked]="form.value.hasPoliceIntervention == false">
 			No
 		</mat-radio-button>
 	</mat-radio-group>
