--- a/front-end/apps/projects/hospital/src/app/modules/extensions/routes/extension/extension.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/extensions/routes/extension/extension.component.html
@@ -1,7 +1,6 @@
 <app-content>
-	<ng-container *ngIf="(extension$ | async) as extension; else loading">
-		<app-content-title [title]="extension.title"></app-content-title>
-		<app-page [page]="extension.page"></app-page>
+	<ng-container *ngIf="(page$ | async) as page; else loading">
+		<app-page [page]="page"></app-page>
 	</ng-container>
 	<ng-template #loading>
 		<mat-progress-bar mode="indeterminate"></mat-progress-bar>
