--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -77,9 +77,27 @@
 							<app-ordenes [patientId]="patientId"></app-ordenes>
 						</ng-template>
 					</mat-tab>
+					<mat-tab
+						*ngFor="let extensionTab of extensionTabs$ | async"
+						[id]="extensionTab.head.id">
+						<ng-template mat-tab-label>
+							<mat-icon>{{extensionTab.head.icon}}</mat-icon>
+							<app-label [label]="extensionTab.head.label"></app-label>
+						</ng-template>
+						<ng-template matTabContent>
+							<ng-container *ngIf="(extensionTab.body$ | async) as tabPage; else loading" >
+								<app-page [page]="tabPage"></app-page>
+							</ng-container>
+						</ng-template>
+					</mat-tab>
+
 				</mat-tab-group>
 			</mat-card-content>
 		</mat-card>
 	</section>
 
 </app-content>
+
+<ng-template #loading>
+	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</ng-template>
