--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/concepts-search-dialog/concepts-search-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/concepts-search-dialog/concepts-search-dialog.component.html
@@ -13,7 +13,10 @@
 </div>
 <div mat-dialog-content>
 	<div class="spinner">
-		<mat-spinner color="primary" *ngIf="!conceptsResultsTable"></mat-spinner>
+		<mat-spinner color="primary" *ngIf="!conceptsResultsTable && !snowstormServiceNotAvailable"></mat-spinner>
+	</div>
+	<div *ngIf="snowstormServiceNotAvailable">
+		<span [translate]="'historia-clinica.snowstorm.SERVICE_NOT_AVAILABLE'"> </span>
 	</div>
 	<app-table [model]="conceptsResultsTable" [mainStyle]="'secondary'"></app-table>
 </div>
