--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna/aplicar-vacuna.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna/aplicar-vacuna.component.html
@@ -22,8 +22,12 @@
 		</mat-form-field>
 	</div>
 
-<div class="spinner" *ngIf="loading else addInmunization">
+<div class="spinner" *ngIf="loading && !snowstormServiceNotAvailable else addInmunization">
 	<mat-spinner color="primary"></mat-spinner>
+</div>
+
+<div *ngIf="snowstormServiceNotAvailable">
+	<span [translate]="'historia-clinica.snowstorm.SERVICE_NOT_AVAILABLE'"> </span>
 </div>
 
 <ng-template #addInmunization>
