--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
@@ -91,6 +91,17 @@
 						</button>
 					</mat-form-field>
 
+					<mat-form-field appearance="outline">
+						<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.SEVERIDAD'">
+						</mat-label>
+						<mat-select id="severity-select" formControlName="severidad">
+							<mat-option *ngFor="let severityType of severityTypes" [value]="severityType.code">
+								{{severityType.display}}
+							</mat-option>
+						</mat-select>
+						<mat-error translate="forms.REQUIRED"></mat-error>
+					</mat-form-field>
+
 					<div class="margin-checkbox" >
 						<mat-checkbox id="cronico-checkbox" formControlName="cronico">
 							<span [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CRONICO'"></span>
