tg-3550. [P2] Error 500 en creación de agenda (no impide la creación)

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.html
@@ -83,6 +83,7 @@
 							       [min]="form.value.startDate" (dateChange)="setAllWeeklyDoctorsOfficeOcupation()">
 							<mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
 							<mat-datepicker #endPicker></mat-datepicker>
+							<mat-error [translate]="'forms.INVALID_DATE'"></mat-error>
 						</mat-form-field>
 					</div>
 				</div>
