tg-3566 Mejora distribucion de propiedades de servicio Snowstorm

--- a/sgh-ansible/roles/sgh-back/templates/sgh.properties.j2
+++ b/sgh-ansible/roles/sgh-back/templates/sgh.properties.j2
@@ -47,3 +47,9 @@ ws.federar.claims.iss= {{ federar_issuer }}
 ws.federar.claims.sub= {{ federar_subject }}
 
 ws.federar.auth.signKey= {{ federar_sign_key }}
+
+# ============================================
+# Snowstorm
+# ============================================
+ws.snowstorm.appId= {{ snowstorm_id }}
+ws.snowstorm.appKey= {{ snowstorm_key }}
