--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/antecedentes-personales-summary/antecedentes-personales-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/antecedentes-personales-summary/antecedentes-personales-summary.component.html
@@ -1,5 +1,5 @@
 <app-summary-card [header]="personalHistoriesHeader">
-	<app-table [showTableHeader]="false" [model]="tableModel" *ngIf="tableModel?.data?.length > 0 else noInfo"></app-table>
+	<app-table [showTableHeader]="true" [model]="tableModel" *ngIf="tableModel?.data?.length > 0 else noInfo"></app-table>
 	<ng-template #noInfo>
 		<app-no-data></app-no-data>
 	</ng-template>
