tg-3592 Fix no se puede tildar diagnósticos individualmente en epicrisis
(cherry picked from commit a80b0c90380010a8ff649addb894c16e02ec22c5)

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
@@ -72,7 +72,7 @@
 							<mat-checkbox (click)="$event.stopPropagation()"
 										  (change)="$event ? diagnosticsEpicrisisService?.toggle(row) : null"
 										  [checked]="diagnosticsEpicrisisService?.isSelected(row)"
-										  [disabled]="row.snomed.id === form.value.mainDiagnosis?.snomed.id">
+										  [disabled]="row.snomed.sctid === form.value.mainDiagnosis?.snomed.sctid">
 							</mat-checkbox>
 						</td>
 					</ng-container>
