tg-3700 [P2] Fix falta columna en tabla problemas cuando no existe problema seleccionado

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -70,7 +70,8 @@
 								  [sectionImportance]="'ambulatoria.paciente.nueva-consulta.RECOMENDADO'"
 								  [tableTitle]="'ambulatoria.paciente.nueva-consulta.problemas.TABLE_TITLE'"
 								  [columns]="problemasService.getColumns()"
-								  [data]="problemasService.getProblemas()">
+								  [data]="problemasService.getProblemas()"
+								  [reducedHeaderSize]="true">
 				<div concept-form *ngIf="!this.readOnlyProblema else problemaForm">
 					<app-concepts-search *ngIf="!problemasService.getSnomedConcept() else problemaForm"
 										 [label]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'"
