--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/document-section/document-section.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/document-section/document-section.component.html
@@ -13,7 +13,7 @@
 	<table mat-table [dataSource]="data" class="secondary">
 
 		<ng-container *ngFor="let column of columns" [matColumnDef]="column.def">
-			<th *matHeaderCellDef>{{ column.header | translate }}</th>
+			<th [ngClass]="reducedHeaderSize ? 'reduced-header' : ''" *matHeaderCellDef>{{ column.header | translate }}</th>
 			<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
 		</ng-container>
 
