tg-3400 [P2] Fix error en mensaje de validación de fechas - Alta médica, componente de problemas

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/medical-discharge/medical-discharge.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/medical-discharge/medical-discharge.component.html
@@ -94,7 +94,7 @@
 							<mat-datepicker-toggle matSuffix [for]="finDatePicker"></mat-datepicker-toggle>
 							<mat-datepicker #finDatePicker></mat-datepicker>
 							<mat-error *ngIf="problemasService.hasError('min', 'fechaFin')"
-								translate="guardia.episode.medical_discharge.problemas.errors.FECHA_FIN_MIN">
+								translate="guardia.episode.medical_discharge.problems.errors.FECHA_FIN_MIN">
 							</mat-error>
 							<mat-error *ngIf="problemasService.hasError('matDatepickerMax', 'fechaFin')"
 								translate="forms.MAX_DATE_TODAY">
