tg-3356 [P2] Fix falta de ortografía al completar una hora incorrecta en alta médica

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/medical-discharge/medical-discharge.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/routes/medical-discharge/medical-discharge.component.html
@@ -25,7 +25,8 @@
 				<mat-error *ngIf="hasError(form.get('dateTime'), 'required', 'time')" translate="forms.REQUIRED">
 				</mat-error>
 				<mat-error *ngIf="hasError(form.get('dateTime'), 'futureTime', 'time')" translate="forms.MAX_TIME_ERROR"></mat-error>
-				<mat-error *ngIf="hasError(form.get('dateTime'), 'beforeTime', 'time')">La hora debe ser posterior a la de creacion del episodio</mat-error>
+				<mat-error *ngIf="hasError(form.get('dateTime'), 'beforeTime', 'time')" translate="guardia.episode.medical_discharge.form.INVALID_TIME">
+				</mat-error>
 			</mat-form-field>
 		</div>
 
