--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna/aplicar-vacuna.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna/aplicar-vacuna.component.html
@@ -26,9 +26,6 @@
 	<mat-spinner color="primary"></mat-spinner>
 </div>
 
-<div *ngIf="snowstormServiceNotAvailable">
-	<span [translate]="'historia-clinica.snowstorm.SERVICE_NOT_AVAILABLE'"> </span>
-</div>
 
 <ng-template #addInmunization>
 
@@ -41,7 +38,11 @@
 			</app-concepts-search>
 
 			<div class="spinner">
-				<mat-spinner diameter="70" color="primary" *ngIf="searching"></mat-spinner>
+				<mat-spinner diameter="70" color="primary" *ngIf="searching && !snowstormServiceNotAvailable"></mat-spinner>
+			</div>
+
+			<div *ngIf="snowstormServiceNotAvailable">
+				<span [translate]="'historia-clinica.snowstorm.SERVICE_NOT_AVAILABLE'"> </span>
 			</div>
 
 			<app-table *ngIf="!searching && !snomedConcept" [model]="conceptsResultsTable"></app-table>
