tg-3873 [Mejora] Hay opciones en select de ocupación que no pueden verse completos

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
@@ -402,7 +402,7 @@
 				</div>
 				<mat-form-field appearance="outline">
 					<mat-select id="occupation-select" formControlName="occupationId" placeholder="{{'pacientes.form.OCCUPATION' | translate}}">
-						<mat-option *ngFor="let occupation of occupations" [value]="occupation.id">
+						<mat-option *ngFor="let occupation of occupations" [value]="occupation.id" matTooltip="{{ occupation.description }}">
 								{{occupation.description}}
 						</mat-option>
 					</mat-select>
@@ -414,7 +414,7 @@
 				</div>
 				<mat-form-field appearance="outline">
 					<mat-select id="educationLevel-select" formControlName="educationLevelId" placeholder="{{'pacientes.form.EDUCATION_LEVEL' | translate}}">
-						<mat-option *ngFor="let educationLevel of educationLevels" [value]="educationLevel.id">
+						<mat-option *ngFor="let educationLevel of educationLevels" [value]="educationLevel.id" matTooltip="{{ educationLevel.description }}">
 								{{educationLevel.description}}
 						</mat-option>
 					</mat-select>
