--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/document-section-table/document-section-table.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/document-section-table/document-section-table.component.html
@@ -1,3 +1,6 @@
+<!--This app-cell-templates component is here to load all the templates (which are in the cell-templates.component.html file).
+ 	Although the component is being used as a service, it has to be present here as it returns TemplateRefs (references to templates)
+ 	and those are loaded only if app-cell-templates is here -->
 <app-cell-templates #cellTemplates [id]="cellTemplates"></app-cell-templates>
 
 <section *ngIf="columns && data">
@@ -8,7 +11,7 @@
 		<ng-container *ngFor="let column of columns" [matColumnDef]="column.def">
 			<th *matHeaderCellDef>{{ column.header | translate }}</th>
 			<td mat-cell *matCellDef="let element; index as i">
-				<ng-container [ngTemplateOutlet]="getTemplate(column.templateName)"
+				<ng-container [ngTemplateOutlet]="getTemplate(column.template)"
 							  [ngTemplateOutletContext]="{
 								  data: element,
 								  text: (column.text) ? column.text(element) : null,
