--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/edit-patient/edit-patient.component.html
@@ -326,7 +326,12 @@
 							<mat-option *ngFor="let occupation of occupations" [value]="occupation.id" matTooltip="{{ occupation.description }}">
 									{{occupation.description}}
 							</mat-option>
+
 						</mat-select>
+						<button id="clear-occupation" type="button" mat-button *ngIf="form.controls.occupationId.value" matSuffix color="warn"
+								mat-icon-button (click)="form.controls.occupationId.reset(); $event.stopPropagation()">
+							<mat-icon>close</mat-icon>
+						</button>
 					</mat-form-field>
 				</div>
 				<div>
@@ -339,6 +344,10 @@
 									{{educationLevel.description}}
 							</mat-option>
 						</mat-select>
+						<button id="clear-educationLevel" type="button" mat-button *ngIf="form.controls.educationLevelId.value" matSuffix color="warn"
+								mat-icon-button (click)="form.controls.educationLevelId.reset(); $event.stopPropagation()">
+							<mat-icon>close</mat-icon>
+						</button>
 					</mat-form-field>
 				</div>
 				<div *hasRole="['ADMINISTRATIVO']" class="form-buttons">
