--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
@@ -412,6 +412,10 @@
 								{{occupation.description}}
 						</mat-option>
 					</mat-select>
+					<button id="clear-occupation" type="button" mat-button *ngIf="form.controls.occupationId.value" matSuffix color="warn"
+							mat-icon-button (click)="form.controls.occupationId.reset(); $event.stopPropagation()">
+						<mat-icon>close</mat-icon>
+					</button>
 				</mat-form-field>
 			</div>
 			<div>
@@ -424,6 +428,10 @@
 								{{educationLevel.description}}
 						</mat-option>
 					</mat-select>
+					<button id="clear-educationLevel" type="button" mat-button *ngIf="form.controls.educationLevelId.value" matSuffix color="warn"
+							mat-icon-button (click)="form.controls.educationLevelId.reset(); $event.stopPropagation()">
+						<mat-icon>close</mat-icon>
+					</button>
 				</mat-form-field>
 			</div>
 			<div *hasRole="['ADMINISTRATIVO']" class="form-buttons">
