tg-3966 Se deben poder cargar valores con decimales en el campo 'Peso'
(cherry picked from commit 217b134b41479ce8637647b9c4d47dc383b132e3)

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/add-anthropometric/add-anthropometric.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/add-anthropometric/add-anthropometric.component.html
@@ -40,7 +40,7 @@
 					</mat-error>
 					<mat-error
 						*ngIf="hasError(this.form, 'pattern', 'height')"
-						[translate]="'forms.FORMAT_NUMERIC'"
+						[translate]="'forms.FORMAT_NUMERIC_INTEGER'"
 						[translateParams]="{pattern: getError(this.form, 'pattern', 'height').pattern}">
 					</mat-error>
 				</mat-form-field>
