tg-3493 [FE] Mejora Órdenes y prescripciones

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.html
@@ -8,8 +8,8 @@
 								(openInNew)="openDialogNewStudy()">
 
 	<div class="header-filters" fxLayout="row" fxLayoutGap="15px">
-		<button mat-icon-button color="primary" (click)="hideFilters(); clear()">
-			<mat-icon fontSet="material-icons-outlined">filter_list</mat-icon>
+		<button mat-button class="filter-button" color="primary" (click)="hideFilters(); clear()">
+			<mat-icon fontSet="material-icons-outlined">filter_alt</mat-icon> FILTRAR
 		</button>
 	</div>
 
