--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.scss
@@ -9,3 +9,10 @@
 .header-filters {
 	padding: 16px 16px 0 16px;
 }
+
+.filter-button {
+	display: inline-flex;
+	vertical-align: middle;
+	margin: 0.5rem;
+	padding:0.2rem;
+}
