--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/item-prescripciones/item-prescripciones.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/item-prescripciones/item-prescripciones.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="space-between start">
-    <h3 mat-line class="primary bold mat-subheading-2 element-margin">
+    <h3 mat-line class="primary bold mat-subheading-2 element-margin uppercase">
         {{prescriptionItemData.prescriptionStatus}}
     </h3>
 
