--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
@@ -7,8 +7,8 @@
 									(openInNew)="openDialogNewMedication(true)">
 
 	<div class="header-filters" fxLayout="row" fxLayoutGap="15px">
-		<button mat-icon-button color="primary" (click)="hideFilters(); clear()">
-			<mat-icon fontSet="material-icons-outlined">filter_list</mat-icon>
+		<button mat-button class="filter-button" color="primary" (click)="hideFilters(); clear()">
+			<mat-icon fontSet="material-icons-outlined">filter_alt</mat-icon> FILTRAR
 		</button>
 	</div>
 
@@ -75,13 +75,13 @@
 			</div>
 
 			<div fxFlex="95%">
-				<button mat-button class="element-light-color" (click)="openDialogNewMedication(false)">
+				<button [disabled]="!selectedMedicationList.length" mat-button class="element-light-color" (click)="openDialogNewMedication(false)">
 					<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.RE_PRESCRIBE'"></span>
 				</button>
-				<button mat-button class="element-light-color" *ngIf="checkMedicationStatus(MEDICATION_STATUS.ACTIVE.id)" (click)="openSuspendMedicationDialog()">
+				<button [disabled]="!selectedMedicationList.length" mat-button class="element-light-color" *ngIf="checkMedicationStatus(MEDICATION_STATUS.ACTIVE.id)" (click)="openSuspendMedicationDialog()">
 					<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
 				</button>
-				<button mat-button class="element-light-color" *ngIf="checkMedicationStatus(MEDICATION_STATUS.STOPPED.id)" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE)">
+				<button [disabled]="!selectedMedicationList.length" mat-button class="element-light-color" *ngIf="checkMedicationStatus(MEDICATION_STATUS.STOPPED.id)" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE)">
 					<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
 				</button>
 			</div>
