--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/footer/footer.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/footer/footer.component.html
@@ -1,17 +1,15 @@
-<div class="footer-container" fxLayout="row wrap" fxLayoutAlign="space-around center" >
-
-	<div></div>
+<div class="footer-container" fxLayout="row wrap" fxLayoutAlign="space-around center">
 
 	<div class="footer-logos">
 		<ng-container *ngFor="let img of footerImages">
 			<img src="{{img.location}}" alt="{{img.alt}}">
 		</ng-container>
 	</div>
-
 	<div class="footer-version">
 		<span *ngIf="applicationVersionNumber" class="footer-version-text">
 			<strong translate="app.SHORT_NAME"></strong>
-			<span [translate]="'version.SHORTENED'" [translateParams]="{versionNumber: applicationVersionNumber}"></span>
+			<span [translate]="'version.SHORTENED'"
+				  [translateParams]="{versionNumber: applicationVersionNumber}"></span>
 		</span>
 	</div>
 
